--- a/internationalization/Messages_de.properties
+++ b/internationalization/Messages_de.properties
@@ -1,8 +1,8 @@
 error_js = FEHLER: Dieser Dienst benötigt JavaScript. Bitte aktivieren Sie Javascript in Ihren Browsereinstellungen.
-error_webrtc =  FEHLER: Dieser Dienst benötigt WebRTC.  Bitte nutzen Sie  <a href="http://www.mozilla.org">Mozilla Firefox</a> oder <a href="http://www.google.com/chrome">Google Chrome</a>, in ihrer neuesten Version.
+error_webrtc =  FEHLER: Dieser Dienst benötigt WebRTC. Bitte nutzen Sie <a href="http://www.mozilla.org">Mozilla Firefox</a> oder <a href="http://www.google.com/chrome">Google Chrome</a>, in ihrer neuesten Version.
 error_no_config = FEHLER: JsCommunicator Konfiguration nicht gefunden.
 error_ua_init_failure = FEHLER: User Agent konnte nicht initialisiert werden.
-error_reg_fail = FEHLER: SIP Registrierung fehlgeschlagen.
+error_reg_fail = FEHLER: SIP Anmeldu-g fehlgeschlagen.
 error_call_attempt_failed = FEHLER: Anruf konnte nicht gestartet werden. Überprüfen Sie dass Mikrofon und/oder Webcam angeschlossen sind, sowie die Sicherheitseinstellungen des Browsers, Ihr Gegenüber unterstützt eventuell nicht alle kompatiblen Codecs.
 error_dynamic = " "
 jsc_login_display_name = Anzeigename (kann leer sein)
@@ -18,7 +18,7 @@ sip_reg_down = Nicht angemeldet
 sip_dest_address = Zieladresse
 session_state_outgoing = Anruf ...
 session_state_incoming = Ankommender Anruf
-session_state_accepted = Answering, connectivity checks in progress ...
+session_state_accepted = Anruf wird beantwortet, führe Verbindungsüberprüfung durch ...
 session_state_active = Anruf verbunden
 button_session_cancel = Abbrechen
 button_session_reject = Abweisen
