--- a/internationalization/Messages_de.properties
+++ b/internationalization/Messages_de.properties
@@ -30,6 +30,6 @@ button_call_audio_video = Anruf (Ton und Video)
 button_session_answer_video = Beantworten (mit Video)
 button_session_answer_hold = Halten
 button_session_answer_hang_up = Auflegen
-button_video_control_self_view = Sich selbst sehen
-button_video_control_self_hide = Sich selbst verstecken
+button_video_control_self_view = Eigenes Bild an
+button_video_control_self_hide = Eigenes Bild aus
 button_video_control_full_screen = Vollbild
